--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -63,6 +63,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.bd4nrg.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.binare-oy.eu:
+    auth: "{{ fedcloud_sa }}"
   vo.beamide.com:
     auth: "{{ fedcloud_sa }}"
   vo.builtrix.tech:
