--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -59,8 +59,6 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.ai4eosc.eu:
     auth: "{{ fedcloud_sa }}"
-  vo.agiliacenter.com:
-    auth: "{{ fedcloud_sa }}"
   vo.bd4nrg.eu:
     auth: "{{ fedcloud_sa }}"
   vo.beamide.com:
@@ -90,6 +88,8 @@ vos:
   vo.eu-openscreen.eu:
     auth: "{{ fedcloud_sa }}"
   vo.eurogeoss.eu:
+    auth: "{{ fedcloud_sa }}"
+  vo.eurosea.marine.ie:
     auth: "{{ fedcloud_sa }}"
   vo.e-rihs.eu:
     auth: "{{ fedcloud_sa }}"
