--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -55,7 +55,6 @@ vos:
   university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:role=vm_operator#aai.egi.eu"
   vo.ai4eosc.eu: "urn:mace:egi.eu:group:vo.ai4eosc.eu:role=vm_operator#aai.egi.eu"
-  vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:role=vm_operator#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.beamide.com: "urn:mace:egi.eu:group:vo.beamide.com:role=vm_operator#aai.egi.eu"
   vo.binare-oy.eu: "urn:mace:egi.eu:group:vo.binare-oy.eu:role=vm_operator#aai.egi.eu"
@@ -80,6 +79,7 @@ vos:
   vo.eu-openscreen.eu: "urn:mace:egi.eu:group:vo.eu-openscreen.eu:role=vm_operator#aai.egi.eu"
   vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:role=vm_operator#aai.egi.eu"
   vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
+  vo.eurosea.marine.ie: "urn:mace:egi.eu:group:vo.eurosea.marine.ie:role=member#aai.egi.eu"
   vo.fuvex.es: "urn:mace:egi.eu:group:vo.fuvex.es:role=vm_operator#aai.egi.eu"
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
   vo.i-nergy.eu: "urn:mace:egi.eu:group:vo.i-nergy.eu:role=vm_operator#aai.egi.eu"
