--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -59,6 +59,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.ai4eosc.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.aneris.eu:
+    auth: "{{ fedcloud_sa }}"
   vo.bd4nrg.eu:
     auth: "{{ fedcloud_sa }}"
   vo.binare-oy.eu:
