--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -55,6 +55,7 @@ vos:
   university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:role=vm_operator#aai.egi.eu"
   vo.ai4eosc.eu: "urn:mace:egi.eu:group:vo.ai4eosc.eu:role=vm_operator#aai.egi.eu"
+  vo.aneris.eu: "urn:mace:egi.eu:group:vo.aneris.eu:role=vm_operator#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.beamide.com: "urn:mace:egi.eu:group:vo.beamide.com:role=vm_operator#aai.egi.eu"
   vo.binare-oy.eu: "urn:mace:egi.eu:group:vo.binare-oy.eu:role=vm_operator#aai.egi.eu"
