--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           cd deploy
           terraform init
-      - name: Generate token for gettint git repo at VM
+      - name: Generate token for getting git repo at VM
         uses: tibdex/github-app-token@v2
         id: generate-token
         with:
