--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -38,13 +38,10 @@ write_files:
       COMMIT_SHA="%REF%"
       SHORT_COMMIT_SHA="%SHORT_REF%"
 
-      # get the repo code and untar at cwd, this may fail if the token expired (e.g. VM rebooted)
-      # still the deploy should be-executed just in case something is missing, so adding a true
-      # at the end
-      curl -L -H "Authorization: token $OAUTH_TOKEN" \
-              -H "Accept: application/vnd.github.v3+raw" \
+      # get the repo code and untar at cwd
+      curl -L -H "Accept: application/vnd.github.v3+raw" \
               "https://api.github.com/repos/EGI-Federation/fedcloud-catchall-operations/tarball/$COMMIT_SHA" | \
-              tar xz --strip=1 || true
+              tar xz --strip=1
       cd deploy
       echo "%ANSIBLE_SECRETS%" | base64 -d > ./secrets.yaml
       ./deploy.sh $OAUTH_TOKEN $COMMIT_SHA $SHORT_COMMIT_SHA $SLACK_WEBHOOK_URL
