Make linter happy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -145,5 +145,5 @@ jobs:
         run: |
           cd deploy
           # show the status
-          cat $VM_ID
-          grep -v "error" $VM_ID
+          cat "$VM_ID"
+          grep -v "error" "$VM_ID"
