--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -22,6 +22,8 @@ packages:
   - git
   - ansible
   - jq
+  - python3-openstackclient
+  - retry
 
 write_files:
   - content: |
@@ -30,6 +32,8 @@ write_files:
 
       mkdir -p /var/tmp/egi
       cd /var/tmp/egi || exit
+
+      systemctl start notify
 
       # Valid GitHub token to access the repo
       OAUTH_TOKEN="%TOKEN%"
@@ -46,3 +50,28 @@ write_files:
       ./deploy.sh $OAUTH_TOKEN $COMMIT_SHA $SHORT_COMMIT_SHA $SLACK_WEBHOOK_URL
     path: /var/lib/cloud/scripts/per-boot/deploy.sh
     permissions: '0755'
+  - content: |
+      #!/bin/sh
+
+      mkdir -p /var/tmp/egi
+      VM_ID="$(cloud-init query instance_id)"
+
+      cloud-init status --wait -l > /var/tmp/egi/$VM_ID
+      # try 10 times, otherwise just die
+      retry -t 10 -d 90 openstack --os-cloud backend object create --name $VM_ID fedcloud-catchall /var/tmp/egi/$VM_ID
+    path: /usr/local/bin/notify.sh
+    permissions: '0755'
+  - content: |
+      [Unit]
+      Description=Notify the github action
+
+      [Service]
+      ExecStart=/usr/local/bin/notify.sh
+
+      [Install]
+      WantedBy=multi-user.target
+    path: /etc/systemd/system/notify.service
+  - content: %CLOUDS_YAML%
+    encoding: base64
+    path: /etc/openstack/clouds.yaml
+    permissions: '0644'
