--- a/cloud-info/requirements.txt
+++ b/cloud-info/requirements.txt
@@ -1,5 +1,5 @@
-# Cloud info version is 0.13.0
-git+https://github.com/EGI-Federation/cloud-info-provider.git@0.13.0
+# Cloud info version is 9d4c4c516b9311c77564444cb9ecbb059b7f2192
+git+https://github.com/EGI-Federation/cloud-info-provider.git@9d4c4c516b9311c77564444cb9ecbb059b7f2192
 git+https://github.com/ARGOeu/argo-ams-library@devel
 python-glanceclient
 python-novaclient
