--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
     - name: Test cloud-info-generator
       run: |
         cd cloud-info
