--- a/cloud-info/pyproject.toml
+++ b/cloud-info/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cloud_info_catchall"
-version = "0.0.1"
+version = "0.0.2"
 description = "Some tools to make cloud-info work with our deployment"
 authors = [
   { name = "Enol Fernandez", email = "enol.fernandez@egi.eu" },
@@ -18,6 +18,7 @@ requires-python = ">=3.10"
 
 [project.scripts]
 config-generator = "cloud_info_catchall.config_generator:main"
+token-generator = "cloud_info_catchall.token_generator:main"
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
