--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -159,6 +159,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   demo.fedcloud.egi.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.eries.eu:
+    auth: "{{ fedcloud_sa }}"    
   eval.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
   waterwatch.c-scale.eu:
