Fix pip linter issue

--- a/atrope/Dockerfile
+++ b/atrope/Dockerfile
@@ -13,7 +13,7 @@ RUN python -m venv /atrope/venv
 ENV PATH="/atrope/venv/bin:$PATH"
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
