Bring ansible role
It was at https://github.com/EGI-Federation/ansible-role-fedcloud-ops
and it's not meant be something of general use so makes little sense to
keep it separated

--- a/deploy/playbook.yaml
+++ b/deploy/playbook.yaml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   roles:
-    - role: ansible-role-fedcloud-ops
+    - role: catchall
       tags: ["all", "docker"]
       vars:
         site_config_dir: ../sites/
