--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -19,6 +19,9 @@ jobs:
           pwd
           mv deploy/roles/catchall/* "${{ github.repository }}"
           ls "${{ github.repository }}"
+          echo "THIS"
+          ls -l /home/runner/work/fedcloud-catchall-operations/fedcloud-catchall-operations/EGI-Federation
+          echo "THAT"
           ls -l /github/workspace/EGI-Federation/fedcloud-catchall-operations/molecule/default/roles || echo "NOP"
           ls -l /github/home/.cache/molecule/fedcloud-catchall-operations/default/roles || echo "NOP"
           ls -l /github/workspace/EGI-Federation || echo "NOP"
