--- a/deploy/roles/catchall/defaults/main.yaml
+++ b/deploy/roles/catchall/defaults/main.yaml
@@ -14,6 +14,7 @@ site_config_dir: sites
 
 # default user for the containers
 egi_user: "1999"
+egi_group: "1999"
 
 # No site information as default
 sites: []
