--- a/image-sync/Dockerfile
+++ b/image-sync/Dockerfile
@@ -13,15 +13,15 @@ RUN apt-get update \
     && apt-get install -y ca-policy-egi-core \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /atrope
+WORKDIR /image-sync
 
-RUN python -m venv /atrope/venv
-ENV PATH="/atrope/venv/bin:$PATH"
+RUN python -m venv /image-sync/venv
+ENV PATH="/image-sync/venv/bin:$PATH"
 
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt \
-    && cat /etc/grid-security/certificates/*.pem >> "$(python -m requests.certs)"
+    && cat /etc/grid-security/certificates/*.pem >> "$(/image-sync/venv/bin/python -m requests.certs)"
 
 COPY . .
 
@@ -37,22 +37,17 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # hadolint ignore=DL3015, DL3008
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-       gnupg2 qemu-utils curl \
-    && curl -s https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 \
-	| apt-key add - \
-    && echo "deb https://repository.egi.eu/sw/production/cas/1/current egi-igtf core" > /etc/apt/sources.list.d/igtf.list \
-    && apt-get update \
-    && apt-get install -y ca-policy-egi-core \
+       gnupg2 qemu-utils \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /atrope
+WORKDIR /image-sync
 
 RUN groupadd -g 1999 python \
     && useradd -r -u 1999 -g python python
 
-COPY --chown=python:python --from=build /atrope/venv ./venv
+COPY --chown=python:python --from=build /image-sync/venv ./venv
 
 USER 1999
 
-ENV PATH="/atrope/venv/bin:$PATH"
-CMD ["sites-sync"]
+ENV PATH="/image-sync/venv/bin:$PATH"
+CMD ["image-sync"]
